--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ footer span:hover{
 }
 
 /*Responsive Media Query */
-@media (max-width: 600px){
+@media (max-width: 1104x){
   .home .max-width{
     margin-left: : 0px;
   }
@@ -457,7 +457,7 @@ footer span:hover{
     }
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 1104px) {
     .about .about-content .left img{
       height: 350px;
       width: 350px;
