--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ footer span:hover{
 }
 
 /*Responsive Media Query */
-@media (max-width: 1920x){
+@media (max-width: 1920px){
   .home .max-width{
     margin-left: : 0px;
   }
